--- a/_layouts/website/summary.html
+++ b/_layouts/website/summary.html
@@ -31,6 +31,7 @@
     </div>
     <div class="hengshidoc-summary-more">
         <h2>更多相关信息</h2>
+        <p>申请License请联系support@hengshi.com</p>
         <p>访问我们的官方网站并申请使用</p>
         <a class="button"
             target="_blank"
