add css class name for version-select plugin and optimize default select styles

--- a/src/less/website/summary.less
+++ b/src/less/website/summary.less
@@ -10,7 +10,7 @@
     width: @sidebar-width;
     color: @body-color;
 
-    .version-select {
+    .versions-select {
         > div {
             display: block;
         }
