--- a/src/less/website/summary.less
+++ b/src/less/website/summary.less
@@ -6,6 +6,8 @@
     padding-bottom: 20px;
     left: 0;
     z-index: 1;
+    bottom: 0;
+    overflow: auto;
 
     width: @sidebar-width;
     color: @body-color;
